[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/duck_hunt_leaderboard_starter.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/duck_hunt_leaderboard_player_score.png" type="Texture" id=2]
[ext_resource path="res://duck_hunt_leaderboards.gd" type="Script" id=3]
[ext_resource path="res://Azalea Font/Azalea-BF64f6fe9c7c4b6.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/critical-32.png" type="Texture" id=5]
[ext_resource path="res://Assets/wargroove-landscape-wallpaper-67088-69386-hd-wallpapers-thumb.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0.207843, 1, 1 )
font_data = ExtResource( 4 )

[node name="duck_hunt_leaderboards" type="Node2D"]
script = ExtResource( 3 )

[node name="DuckHuntLeaderboardPlayerScore" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.165, 0.165 )
z_index = 3
texture = ExtResource( 2 )

[node name="record" type="Label" parent="DuckHuntLeaderboardPlayerScore"]
margin_left = -66.667
margin_top = -1054.55
margin_right = 48.333
margin_bottom = -1020.55
rect_scale = Vector2( 6, 6 )
custom_colors/font_color = Color( 0, 0.0705882, 1, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="DuckHuntLeaderboardStarter" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.165, 0.165 )
z_index = 3
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -30.0
margin_top = -5.99997
margin_right = 370.0
margin_bottom = 219.0
rect_scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 6 )

[node name="exit" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 860.0
margin_top = 2.0
margin_right = 892.0
margin_bottom = 34.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 5 )

[connection signal="button_down" from="exit" to="." method="_on_exit_button_down"]
